[package]
name = "dlx-rs"
version = "0.0.2"
edition = "2021"
license = "CC0-1.0"
description = "Implementation of dancing links in Rust"
repository = "https://github.com/tveness/dlx-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dlx_rs"
path = "src/lib.rs"

[dev-dependencies]
criterion="0.3.6"

[[bench]]
name = "dlx-benches"
harness = false

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

