[package]
name = "dlx-rs"
version = "1.0.0"
edition = "2021"
license = "CC0-1.0"
description = "Implementation of dancing links in Rust"
repository = "https://github.com/tveness/dlx-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dlx_rs"
path = "src/lib.rs"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }
rand = "0.8.5"

[[bench]]
name = "dlx-benches"
harness = false

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

