[package]
name = "dlx-rs"
version = "1.3.0"
edition = "2021"
license = "MIT"
description = "Implementation of dancing links in Rust"
repository = "https://github.com/tveness/dlx-rs"
readme = "README.md"

[lib]
name = "dlx_rs"
path = "src/lib.rs"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }
rand = "0.8.5"

[[bench]]
name = "dlx-benches"
harness = false

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]


[features]
default = [ "aztec", "queens", "sudoku" ]
aztec = []
queens = []
sudoku = []
